# transferlearning

./: .gitignore  ADNI_MPR_N3_metadata.csv  HCP_A_id_sex_age_mmse_moca.csv  OASIS_MMSE.xlsx  PROJECT_STRUCTURE_AND_PIPELINE.md  README.md  handover.md  push_modeling_to_github.sh  pyproject.toml  requirements.txt
brainage_outputs/hcp_mmse_baseline/: metrics.json  resolved_paths.json  training_summary.txt
configs/environment/: example.env  linux_gpu_hcp_mmse.yml  ubuntu_data_layout.env
configs/experiment/: adni_cls_baseline_linux.yaml  adni_cls_multimodal_baseline_linux.yaml  adni_cls_multimodal_transfer_freeze_backbone.yaml  adni_cls_multimodal_transfer_freeze_backbone_tuned.yaml  adni_cls_multimodal_transfer_full_ft.yaml  adni_cls_multimodal_transfer_full_ft_tuned.yaml  (+34 more)
scripts/: aggregate_adni_classification_metrics.py  attach_hcp_mmse_tmux.sh  bootstrap_hcp_mmse_linux.sh  build_merged_metadata.py  build_splits.py  create_metadata_sample.py  migrate_legacy_outputs.py  pull_and_rerun_hcp_oasis.sh  pull_and_rerun_regression_suite.sh  push_results_to_github.sh  run_adni_classification_from_env.sh  run_adni_classification_seeds.py  run_adni_diagnosis_analysis_from_env.sh  run_adni_mmse_from_env.sh  run_adni_transfer_from_env.sh  run_adni_transfer_seeds.py  run_hcp_mmse_from_env.sh  run_hcp_mmse_linux.sh  run_lodo_from_env.sh  run_mmse_pretraining_from_env.sh  run_oasis_transfer_from_env.sh  setup_tailscale_linux.sh  start_hcp_mmse_tmux.sh
tests/: test_adni_mmse.py  test_classification_metrics.py  test_experiment_tracking.py  test_hcp_split_roundtrip.py  test_splits.py
(+250 files in other folders)
